Demo.Infra/k8s/local/fintech/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    targetPort: broker
    name: broker-traffic
  - port: 15672
    targetPort: management
    name: management-traffic

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        ports:
        - containerPort: 5672
          name: broker
        - containerPort: 15672
          name: management
